[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "spinky"
version = "1.0.0"
description = "A simple API wrapping a sonic search backend"
authors = ["Andy Gimblett <andy@barefootcode.com>"]
repository = "https://github.com/gimbo/spiky"
homepage = "https://github.com/gimbo/spiky"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.38.1"
uvicorn = "^0.8.6"
asonic = "^1.0"
